package ohmdb.messages;

option java_package = "ohmdb.messages";
option optimize_for = SPEED;

message StartService {
  optional string service_name = 1;
  optional int32 service_port = 2;
  optional string service_argv = 3;
}

message StopService {
  optional string service_name = 1;
  // Set this to true to make it a 'hard stop', otherwise a graceful shutdown will be used.
  optional bool hard_stop = 2;
  optional string stop_reason = 3;
}

message ServiceSubCommand {
  optional string service_name = 1;
  optional string sub_command = 2;
}

message CommandReply {
  optional bool command_success = 1;
  optional string command_stdout = 2;
  optional string command_stderr = 3;
}